# BoostWaveExample

./: .gitignore  CMakeLists.txt  Common.hpp  License.txt  ReadMe.txt  predefined.h  predefined.txt  sample.h
No1_Basic/: Basic.cpp  CMakeLists.txt
No2_IgnoreDirectiveHook/: CMakeLists.txt  IgnoreDirectiveHook.cpp  IgnoreDirectiveHook.hpp
No3_OutputHook/: CMakeLists.txt  OutputHook.cpp  OutputHook.h  OutputHook.hpp  waveIosDef.h
No4_MakeIncludeTree/: CMakeLists.txt  MakeIncludeTree.cpp  MakeIncludeTree.hpp
No5_JapaneseEncoding/: CMakeLists.txt  JapaneseEncoding.cpp  JapaneseEncoding.hpp  JapaneseEncodingTest.cpp
No5_JapaneseShiftJIS/: CMakeLists.txt  CTestTestfile.cmake  JapaneseShiftJIS.cpp  wave_utf8.hpp  wave_utf8_test.cpp
